re-factored the code slightly

--- a/index.html
+++ b/index.html
@@ -3,12 +3,16 @@
 		<head>
 			<meta charset="UTF-8">
 			<meta name="viewport" content="width=device-width, initial-scale=1.0">
-			<title>Unsplash</title>
+
 			<link rel="stylesheet" href="/_app/css/main.css">
 			<script type="module" src="/_app/js/main.js"></script>
+			
+			<title>Unsplash</title>
 		</head>
 		
 		<body>
 			<h1>Unsplash</h1>
+			<section id="image__container"></section>
+			<p class="warning hidden"></p>
 		</body>
 	</html>
